[gd_scene load_steps=6 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/font24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/font15.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Boxy-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 15
extra_spacing_top = 3
font_data = ExtResource( 4 )

[node name="HighScore" type="MarginContainer"]
self_modulate = Color( 0.537255, 0.301961, 0.301961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 280
custom_constants/margin_top = 80
custom_constants/margin_left = 280
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 280.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 370.0
custom_constants/separation = 7

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"
align = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 240.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "SOUND"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 240.0
margin_bottom = 170.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_left = 70.0
margin_top = 170.0
margin_right = 170.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "BACK"
[connection signal="toggled" from="VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
